<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Cart">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editImageIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="32dp"
            android:src="@drawable/ic_add" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="6"
            android:orientation="vertical"
            tools:ignore="InefficientWeight">

            <EditText
                android:id="@+id/productNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintProductNameET"
                android:textSize="24sp"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/productPriceET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintProductPriceET"
                android:textSize="16sp"
                tools:ignore="Autofill,TextFields" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/textSaveBTN"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/listViewLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item"/>

</LinearLayout>